force-app/main/default/objects/GymMember__c/GymMember__c.object-meta.xml
<CustomObject>
    <description>Standard gym member in the Gym App</description>
    <label>GymMember</label>
    <nameField>
        <displayFormat>{YY}{000000}</displayFormat>
        <label>GymMemberID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GymMembers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>