force-app/main/default/objects/GymMember__c/fields/Lastest_Check_in__c.field-meta.xml
<CustomField>
    <fullName>Lastest_Check_in__c</fullName>
    <description>Last time the gym member checked-in</description>
    <label>Lastest Check-in</label>
    <type>DateTime</type>
</CustomField>