force-app/main/default/objects/GymMember__c/fields/MemberName__c.field-meta.xml
<CustomField>
    <fullName>MemberName__c</fullName>
    <formula>FirstName__c + &quot; &quot; +  LastName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member Name</label>
    <type>Text</type>
</CustomField>