force-app/main/default/objects/GymMember__c/validationRules/Pin_must_be_a_number.validationRule-meta.xml
<ValidationRule>
    <fullName>Pin_must_be_a_number</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISNUMBER( PIN__c ))</errorConditionFormula>
    <errorMessage>PIN must be saved as a  number</errorMessage>
</ValidationRule>