force-app/main/default/objects/GymMember__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MemberName__c</columns>
    <columns>Enrollment__c</columns>
    <columns>NAME</columns>
    <columns>isActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>